// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemTitle should render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListItemTitle
    className="lorem"
    reference={null}
    shouldInitPreload={false}
    title="Lorem"
    to={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Lorem",
      "className": "lorem",
    },
    "ref": null,
    "rendered": "Lorem",
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Lorem",
        "className": "lorem",
      },
      "ref": null,
      "rendered": "Lorem",
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ListItemTitle should render 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListItemTitle
    className="lorem"
    reference={null}
    shouldInitPreload={false}
    title="Lorem"
    to="ipsum"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Link
        onClick={[Function]}
        to="ipsum"
      >
        Lorem
      </Link>,
      "className": "lorem",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Lorem",
        "onClick": [Function],
        "to": "ipsum",
      },
      "ref": null,
      "rendered": "Lorem",
      "type": "Link",
    },
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Link
          onClick={[Function]}
          to="ipsum"
        >
          Lorem
        </Link>,
        "className": "lorem",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem",
          "onClick": [Function],
          "to": "ipsum",
        },
        "ref": null,
        "rendered": "Lorem",
        "type": "Link",
      },
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ListItemTitle should render 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListItemTitle
    className="lorem"
    reference="ipsum"
    shouldInitPreload={false}
    title="Lorem"
    to={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Reference
        isLinked={true}
        reference="ipsum"
        title="Lorem"
      />,
      "className": "lorem",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "isLinked": true,
        "reference": "ipsum",
        "title": "Lorem",
      },
      "ref": null,
      "rendered": null,
      "type": "Reference",
    },
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Reference
          isLinked={true}
          reference="ipsum"
          title="Lorem"
        />,
        "className": "lorem",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "isLinked": true,
          "reference": "ipsum",
          "title": "Lorem",
        },
        "ref": null,
        "rendered": null,
        "type": "Reference",
      },
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ListItemTitle should render 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListItemTitle
    className="lorem"
    reference="ipsum"
    shouldInitPreload={false}
    title="Lorem"
    to="ipsum"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Link
        onClick={[Function]}
        to="ipsum"
      >
        <Reference
          isLinked={false}
          reference="ipsum"
          title="Lorem"
        />
      </Link>,
      "className": "lorem",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Reference
          isLinked={false}
          reference="ipsum"
          title="Lorem"
        />,
        "onClick": [Function],
        "to": "ipsum",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "isLinked": false,
          "reference": "ipsum",
          "title": "Lorem",
        },
        "ref": null,
        "rendered": null,
        "type": "Reference",
      },
      "type": "Link",
    },
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Link
          onClick={[Function]}
          to="ipsum"
        >
          <Reference
            isLinked={false}
            reference="ipsum"
            title="Lorem"
          />
        </Link>,
        "className": "lorem",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Reference
            isLinked={false}
            reference="ipsum"
            title="Lorem"
          />,
          "onClick": [Function],
          "to": "ipsum",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "isLinked": false,
            "reference": "ipsum",
            "title": "Lorem",
          },
          "ref": null,
          "rendered": null,
          "type": "Reference",
        },
        "type": "Link",
      },
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ListItemTitle should render 5`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListItemTitle
    className="lorem"
    reference={null}
    shouldInitPreload={true}
    title="Lorem"
    to="ipsum"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Link
        onClick={[Function]}
        to="ipsum"
      >
        Lorem
      </Link>,
      "className": "lorem",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Lorem",
        "onClick": [Function],
        "to": "ipsum",
      },
      "ref": null,
      "rendered": "Lorem",
      "type": "Link",
    },
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Link
          onClick={[Function]}
          to="ipsum"
        >
          Lorem
        </Link>,
        "className": "lorem",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem",
          "onClick": [Function],
          "to": "ipsum",
        },
        "ref": null,
        "rendered": "Lorem",
        "type": "Link",
      },
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
